@@ -14,3 +14,11 @@ issue 32: EnderChest was not working in debug world; fixed on: 01.02.2002 by uuk
 issue 37: Exception printer was crashing; fixed on: 01.02.2020 by uuk; occur since: logging introduction
 issue 38: drawing of buttons was wrong; fixed on: 01.02.2020 by uuk; occur since: upgrade of resources to 1.15.2
 issue 13: game crashes on hovering above button; fixed on: 01.02.2020 by uuk
+issue 12: chat event bus was created active and not closed until user closes the real chat leading to unwanted behaviour
+          fixed on: 01.02.2020 by uuk; occur since: EventBus introduction
+issue 14: raw crash in BlockItemFactory due to None-block-instance; fixed on: 01.02.2020 by uuk
+issue 17: html character information was displayed in chat as the character itself instead of the blank text, fixed on:
+          01.02.2020 by uuk
+issue 41: chat index pointer was not correct; fixed on: 01.02.2020 by uuk
+issue 26: when an file is opened in an directory to remove, it fails to remove it and loops infinitely,
+          fixed on: 01.02.2020 by uuk; occur since: introduction of removing these things under try-except
