@@ -720,4 +720,7 @@ started these clone on 12th of July, 2019
 [uuk]: implemented option background
 [uuk]: merged cleanups-branch onto master
 [uuk]: added new flag stored in build/info.json for indicating if prebuild system had finished or not
+[uuk]: fixed issue 12, 14, 26, 41
+[uuk]: added support for DELETE, END and BEGIN in chat
+[uuk]: when you change cursor position by arrow-keys in chat, you will now go around if you go to far
 
